Fix text wrapping

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -108,8 +108,9 @@ hr {
 
 .slogan span {
   display: block;
-  width: 6.5em;
+  // width: 6.5em;
   height: 1.25em;
+  white-space: nowrap;
 }
 
 @keyframes typing {
